# vector-lsp

./: .gitignore  Cargo.toml  README.md  build.rs
contrib/d2rdoc/: _patches.js  sync-schemas.ps1
contrib/d2rdoc/plugins/: calcCheck.ts  cubeInputCheck.ts  enumHover.ts  itemCodeCheck.ts  itemNameHover.ts  propCodeCheck.ts  tcChance.ts  tcItemCheck.ts
plugins/: calcCheck.ts  cubeInputCheck.ts  enumHover.ts  itemCodeCheck.ts  itemNameHover.ts  propCodeCheck.ts  tcItemCheck.ts  vector-lsp-plugin.d.ts
src/: backend.rs  diagnostics.rs  document.rs  main.rs  plugin.rs  settings.rs  workspace.rs
src/cli/: args.rs  mod.rs
src/contrib/: mod.rs
src/contrib/d2rdoc/: mod.rs
src/runtime/: mod.rs
src/schema/: format.rs  mod.rs  registry.rs
