[package]
name = "vector-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.22"
deno_core = "0.311.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.2", features = ["full"] }
tower-lsp = "0.20.0"
